# hello_cmake

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  main.cpp
